rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.5_2000_IN-CS3-SDF-SDF-Protocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.5_2000_IN-CS3-SDF-SDF-Protocol.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 120, column 38]
     │
     │ 
 120 │  {execute} ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 122 │  -- DISP Contracts and Packages
     │
─────╯
