rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.6_2000_IN-CS3-SCF-SCF-Classes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.6_2000_IN-CS3-SCF-SCF-Classes.asn1
---
Warnings:
SyntaxMismatch in ASN grammar: Syntax mismatch while resolving information object.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs3_scf_scf_classes {
    extern crate alloc;
    use super::in_cs3_common_classes::*;
    use super::in_cs3_object_identifiers::{
        COMMON_CLASSES, GULS_NOTATION, SCF_SRF_CLASSES, SSF_SCF_CLASSES,
    };
    use super::in_cs3_scf_srf_classes::*;
    use super::in_cs3_ssf_scf_classes::*;
    use super::notation::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
