rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1238.6_2000_IN-CS3-SCF-SCF-ops-args.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1238.6_2000_IN-CS3-SCF-SCF-ops-args.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 305, column 15]
     │
     │ 
 305 │  {notificationProvided{b1, b2}, ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 306 │               opcode-confirmedNotificationProvided}
 308 │  --Direction: controlling SCF ->supporting SCF , Timer Thinc
     │
─────╯
